--- a/frontend/src/style.scss
+++ b/frontend/src/style.scss
@@ -24,7 +24,7 @@ $black:    #000;
 $contrast:      #FF6E2A;
 
 // color-scheme
-$primary:       #feb6ff;
+$primary:       #ffc6db;
 $secondary:     #c5c5c5;
 $success:       $green;
 $info:          $cyan;
