--- a/frontend/src/style.scss
+++ b/frontend/src/style.scss
@@ -22,6 +22,7 @@ $gray-800: #343a40;
 $gray-900: #212529;
 $black:    #000;
 $contrast:      #FF6E2A;
+$background:    #ffdef8;
 
 // color-scheme
 $primary:       #ffc6db;
