--- a/frontend/src/style.scss
+++ b/frontend/src/style.scss
@@ -26,7 +26,7 @@ $background:    #ffdef8;
 
 // color-scheme
 $primary:       #ffc6db;
-$secondary:     #c5c5c5;
+$secondary:     #ffdfea;
 $success:       $green;
 $info:          $cyan;
 $warning:       $yellow;
