--- a/frontend/src/style.scss
+++ b/frontend/src/style.scss
@@ -553,7 +553,7 @@ $mobile-breakpoint: 768px;
 
 // Reviews Section Styles
 .reviews-section {
-    margin: 3rem 0;
+    margin-top: 1rem;
     padding: 2rem 0;
     background: $white;
     border-radius: 1rem;
@@ -561,7 +561,6 @@ $mobile-breakpoint: 768px;
 
     .reviews-header {
         padding: 0 2rem;
-        margin-bottom: 2rem;
 
         h3 {
             color: $brand-dark;
